# NESDR-Smart-v5-APRS-iGate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELEOPER_NOTES.md  DEVELOPER_NOTES.md  M3_COMPLETION_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  MIGRATION_TEST_STATUS.md  Makefile  README.md  RELEASE.md  TEST_UPDATE_SUMMARY.md  TODO.md  UPLOADING_FEATURE.md  install.sh  pyproject.toml  pyrightconfig.json  uninstall.sh
.github/chatmodes/: test.chatmode.md
.github/workflows/: ci.yml  generate-archive.yml
docs/: INSTALL.md  ROADMAP.md  developer.md  diagnostics.md  direwolf-integration.md  direwolf-setup-debian.md  onboarding-spec.md  onboarding.md  progress.md  radio-layer.md  release_guide.md  samples.md  troubleshooting.md  wspr.md
docs/templates/: direwolf.conf
samples/: capture_summary.txt
scripts/: capture_samples.sh  install_wsprd.sh  release.py  run_direwolf.sh  sync_versions.py  verify_release.sh
src/: rtlsdr.py
src/neo_adsb/: __init__.py  pyproject.toml
src/neo_adsb/adsb/: __init__.py  capture.py  diagnostics.py  reporter.py
src/neo_adsb/commands/: __init__.py  diagnostics.py  listen.py  setup.py
src/neo_aprs/: __init__.py  pyproject.toml
src/neo_aprs/aprs/: __init__.py  aprsis_client.py  ax25.py  kiss_client.py
src/neo_aprs/commands/: __init__.py  diagnostics.py  diagnostics_old.py  listen.py  listen_old.py  setup.py  setup_old.py
src/neo_core/: __init__.py  cli.py  config.py  config_layering.py  diagnostics_helpers.py  pyproject.toml  term.py  timeutils.py
src/neo_core/_compat/: rtlsdr.py
src/neo_core/radio/: __init__.py
src/neo_igate/: __init__.py  __main__.py  cli.py  config.py  diagnostics_helpers.py  term.py  timeutils.py
src/neo_igate/_compat/: __init__.py  rtlsdr.py
src/neo_igate/aprs/: __init__.py  aprsis_client.py  ax25.py  kiss_client.py
src/neo_igate/commands/: __init__.py  diagnostics.py  listen.py  setup.py  setup_io.py  wspr.py
src/neo_igate/radio/: __init__.py  base.py  capture.py  nesdr.py
src/neo_igate/telemetry/: __init__.py  mqtt_publisher.py
src/neo_igate/templates/: __init__.py  direwolf.conf
src/neo_igate/wspr/: calibrate.py  capture.py  decoder.py  diagnostics.py  publisher.py  scan.py  uploader.py
src/neo_rx/: __init__.py  __main__.py  cli.py  config.py  config_original.py  diagnostics_helpers.py  term.py  timeutils.py
src/neo_rx/_compat/: __init__.py  rtlsdr.py
src/neo_rx/aprs/: __init__.py  aprsis_client.py  ax25.py  kiss_client.py
src/neo_rx/commands/: __init__.py  diagnostics.py  listen.py  setup.py  setup_io.py  wspr.py
src/neo_rx/radio/: __init__.py  capture.py  nesdr.py
src/neo_rx/telemetry/: __init__.py  mqtt_publisher.py  ondisk_queue.py  publisher.py
src/neo_rx/templates/: __init__.py  direwolf.conf
src/neo_rx/wspr/: __init__.py  calibrate.py  capture.py  decoder.py  diagnostics.py  publisher.py  scan.py  uploader.py
src/neo_telemetry/: __init__.py  mqtt_buffer.py  mqtt_publisher.py  ondisk_queue.py  publisher.py  pyproject.toml
src/neo_wspr/: __init__.py  pyproject.toml
src/neo_wspr/commands/: __init__.py  calibrate.py  diagnostics.py  listen.py  scan.py  upload.py  worker.py
src/neo_wspr/wspr/: calibrate.py  capture.py  decoder.py  diagnostics.py  publisher.py  scan.py  uploader.py
src/nesdr_igate/: __init__.py  __main__.py  cli.py  config.py  diagnostics_helpers.py
src/nesdr_igate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nesdr_igate/aprs/: __init__.py  aprsis_client.py  ax25.py  kiss_client.py
src/nesdr_igate/commands/: __init__.py  diagnostics.py  listen.py  setup.py  setup_io.py
src/nesdr_igate/radio/: __init__.py  capture.py  nesdr.py
src/nesdr_igate/telemetry/: __init__.py
src/nesdr_igate/templates/: __init__.py  direwolf.conf
tests/: test_adsb_capture.py  test_adsb_cli.py  test_adsb_diagnostics.py  test_adsb_reporter.py  test_aprs_qconstruct.py  test_aprsis_client.py  test_ax25.py  test_cli.py  test_concurrency.py  test_config.py  test_config_layering.py  test_diagnostics_command.py  test_diagnostics_helpers.py  test_kiss_client.py  test_listen_command_extended.py  test_listen_summary.py  test_listen_unit.py  test_mqtt_buffer.py  test_mqtt_durability.py  test_mqtt_reconnect.py  test_placeholder.py  test_radio_capture.py  test_radio_nesdr.py  test_rtlsdr_compat.py  test_setup_additional.py  test_setup_io.py  test_setup_validation.py  test_term_keyboard.py  test_wspr_apply_ppm_writes_config.py  test_wspr_calibrate.py  test_wspr_capture.py  test_wspr_capture_publish.py  test_wspr_cli_upload.py  test_wspr_decoder.py  test_wspr_diagnostics.py  test_wspr_json_output.py  test_wspr_persist_creates_backup.py  test_wspr_scan.py  test_wspr_uploader.py
tests/fixtures/: wsprd_output.txt
