[build-system]
requires = ["setuptools>=69", "build>=1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-rx"
version = "0.2.2"
description = "Neo-RX APRS iGate CLI"
authors = [{ name = "Paul Sturm" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
keywords = ["aprs", "igate", "sdr", "rtl-sdr"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Operating System :: POSIX :: Linux",
	"Topic :: Communications :: Ham Radio"
]
dependencies = [
	"numpy>=2.0,<3",
	"pyrtlsdr>=0.3.0,<0.4",
	"aprslib>=0.7.2,<0.9",
	"tomli-w>=1.1,<2",
	"requests>=2.31,<3",
]

[project.urls]
Homepage = "https://github.com/chevybowtie/NESDR-Smart-v5-APRS-iGate"

[project.scripts]
neo-rx = "neo_core.cli:main"
neo-rx-next = "neo_core.cli:main"

[project.optional-dependencies]
dev = [
	"pytest>=8.3",
	"pytest-asyncio>=0.23",
	"pytest-cov>=5.0",
	"pytest-rerunfailures>=14.0",
	"black>=24.4",
	"mypy>=1.10",
	"ruff>=0.6",
	"coverage[toml]>=7.6",
	"twine>=4.0",
]
direwolf = [
	"sox>=1.5",
]
wspr = [
	"paho-mqtt>=1.6",
	"requests>=2.0",
]
mqtt = [
	"paho-mqtt>=1.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
neo_rx = ["templates/direwolf.conf", "wspr/bin/wsprd"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:pkg_resources is deprecated:UserWarning",
]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
