[build-system]
requires = ["setuptools>=69", "build>=1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-rx"
version = "0.2.6"
description = "Neo-RX multi-mode radio toolkit (APRS, WSPR, telemetry)"
authors = [{ name = "Paul Sturm" }]
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
keywords = ["aprs", "igate", "wspr", "sdr", "rtl-sdr", "ham-radio"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Operating System :: POSIX :: Linux",
	"Topic :: Communications :: Ham Radio"
]
dependencies = [
	"neo-core==0.2.6",
	"neo-aprs==0.2.6",
	"neo-wspr==0.2.6",
	"neo-telemetry==0.2.6",
]

[project.urls]
Homepage = "https://github.com/chevybowtie/NESDR-Smart-v5-APRS-iGate"

[project.scripts]
neo-rx = "neo_core.cli:main"
neo-rx-next = "neo_core.cli:main"

[project.optional-dependencies]
dev = [
	"pytest>=8.3",
	"pytest-asyncio>=0.23",
	"pytest-cov>=5.0",
	"pytest-rerunfailures>=14.0",
	"black>=24.4",
	"mypy>=1.10",
	"ruff>=0.6",
	"coverage[toml]>=7.6",
	"twine>=4.0",
	"build>=1.0",
]
direwolf = [
	"neo-aprs[direwolf]==0.2.6",
]
all = [
	"neo-aprs[direwolf]==0.2.6",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "neo_rx",
    "neo_rx._compat",
    "neo_rx.aprs",
    "neo_rx.commands",
    "neo_rx.radio",
    "neo_rx.telemetry",
    "neo_rx.templates",
    "neo_rx.wspr",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:pkg_resources is deprecated:UserWarning",
]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
